--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.5",
+    "@aws-sdk/client-s3": "^3.456.0",
+    "axios": "^1.6.2",
+    "mime-types": "^2.1.35",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
+    "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
+    "@types/node": "20.9.2",
+    "@types/react": "18.2.37",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "5.2.2"
   }
 }
